[package]
name = "certran-logs"
version = "0.1.0"
authors = ["Gergo Nemeth <nemethgergo02@gmail.com>"]
description = "Primitives and parsers for Certificate Transparency logs"
documentation = ""
edition = "2024"
keywords = ["async", "certificate", "transparency", "logs"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/certran/certran-logs"
rust-version = "1.87.0"

[features]
default = []
async = ["async-trait"]
debug-fmt = []

[dependencies]
base64 = { version = "0.22.1" }
byteorder = { version = "1.5.0" }
chrono = { version = "0.4.41" }
oid-registry = { version = "0.8.1" }
ouroboros = { version = "0.18.5" }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = { version = "2.0.12" }
url = { version = "2.5.4" }
x509-parser = { version = "0.17.0" }
async-trait = { version = "0.1.88", optional = true }
